--- a/html/index.html
+++ b/html/index.html
@@ -22,17 +22,14 @@
                         <option value="enable">Enable</option>
                     </select>
                     <br><text>RAG: </text>
-                    <select name="ragMode" id="ragMode">
-                        <option value="disable" selected>Disable</option>
-                        <option value="enable">Enable</option>
-                    </select>
                     <text>Conversation Type: </text>
                     <select name="conversationType" id="convtype">
                         <option type="text" value="normal" selected>1. General Conversation</option>                        
                         <option value="long-form-writing-agent">2. Long Form Writing</option>     
                         <!-- <option value="long-form-writing-agent-map-reduce">2. Long Form Writing (Map-Reduce)</option> -->
-                        <option value="translation">3. Translation</option>
-                        <option value="grammar">4. Grammatical Error Correction</option>
+                        <option value="rag-opensearch">2. RAG (OpenSearch)</option>
+                        <option value="agent-executor">3-1. Agentic RAG (LangGraph)</option>
+                        <option value="agent-executor-chat">3-2. Agentic RAG Chat (LangGraph)</option>    
                     </select>
                 </div>
                 <input class="btn" type="submit" value="Submit">                
